# core

./: .dockerignore  .envrc  .gitignore  .gitmodules  AGENT.md  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  MONERO_OXIDE_MIGRATION.md  README.md  SECURITY.md  config  dprint.json  eigenwallet.flatpakrepo  flake.nix  index.html  justfile  net.unstoppableswap.gui.flatpakref  org.eigenwallet.app.flatpakref  regenerate_sqlx_cache.sh  rust-toolchain.toml  shell.nix  summary  summary.idx  summary.idx.sig  summary.sig  unstoppableswap.flatpakrepo
bitcoin-wallet/: Cargo.toml
bitcoin-wallet/src/: address.rs  bitcoin.rs  cancel.rs  core.rs  early_refund.rs  electrum.rs  ext.rs  lib.rs  listener.rs  lock.rs  primitives.rs  punish.rs  redeem.rs  refund.rs  rpc.rs  wallet.rs
bitcoin-wallet/tests/: cpfp.rs  integration.rs
bitcoin-wallet/tests/harness/: bitcoind.rs  electrs.rs  mod.rs
eigensync/: Cargo.toml  README.md
eigensync-client/: Cargo.toml
eigensync-client/src/: lib.rs
eigensync-protocol/: Cargo.toml
eigensync-protocol/src/: lib.rs
eigensync-server/: Cargo.toml
eigensync-server/src/: main.rs
eigensync/examples/: device_sync.rs
eigensync/migrations/: 20250829103047_create_initial_table.sql
eigensync/src/: database.rs  lib.rs  lib2.rs  lib3.rs  protocol.rs  sync.rs  types.rs
eigensync/src/client/: behaviour.rs  database.rs  document.rs  sync_loop.rs
eigensync/src/server/: behaviour.rs  database.rs
eigensync/tests/: integration.rs
electrum-pool/: Cargo.toml
electrum-pool/src/: connection.rs  lib.rs
libp2p-community-tor/: Cargo.toml
libp2p-rendezvous-node/: Cargo.toml  Dockerfile  README.md
libp2p-rendezvous-node/src/: behaviour.rs  main.rs  swarm.rs  tor.rs  tracing_util.rs
libp2p-rendezvous-server/: Cargo.toml  Dockerfile  README.md
libp2p-rendezvous-server/src/: main.rs
libp2p-tor/: Cargo.toml  README.md
libp2p-tor/examples/: ping-onion.rs
libp2p-tor/src/: address.rs  dial_limiter.rs  lib.rs
libp2p-tor/src/arti/: mod.rs
monero-amount/: Cargo.toml
monero-amount/src/: lib.rs
monero-harness/: Cargo.toml
monero-harness/src/: image.rs  lib.rs
monero-harness/tests/: monerod.rs  wallet.rs
monero-oxide-ext/: Cargo.toml
monero-oxide-ext/src/: lib.rs
monero-rpc/: Cargo.toml
monero-rpc-pool/: Cargo.toml
monero-rpc-pool/migrations/: 20250813185138_ravfx_uses_https.sql  20250813225842_cryptostorm_mainnet_node.sql
monero-rpc-pool/src/: config.rs  connection_pool.rs  database.rs  lib.rs  main.rs  pool.rs  proxy.rs  tor.rs  types.rs
monero-rpc-pool/tests/: pool_integration.rs
monero-rpc/src/: lib.rs  monerod.rs  wallet.rs
monero-sys/: CLAUDE.md  Cargo.toml  build.rs  vcpkg.json
monero-sys/.sqlx/: query-37bd0dfd595211210d4e5dc179d03c4cb359147bb24072b49d387a72e34067fc.json  query-8ebd0873cb6aaaa0cab97742fad51978c706e324dc7c1febba68e178972f5899.json  query-c3d93a4b8657ad8638ba1a893b4c2c0026d330d2b48b55bcb8686b248ad1659a.json
monero-sys/migrations/: 20250728224006_add_wallet_name.sql
monero-sys/patches/: 0001-fix-dummy-translation-generator.patch  0002-fix-iOS-depends-build.patch  0003-include-locale-only-when-targeting-WIN32.patch  0004-fix-___isPlatformVersionAtLeast.patch  eigenwallet_0002_wallet2_increase_rpc_retries.patch  eigenwallet_0003_pendingTransaction_getTxKey.patch  eigenwallet_0003_pending_transaction_tx_keys.patch  eigenwallet_0004_wallet_impl_balance_per_subaddress.patch  eigenwallet_0005_pending_transaction_raw_tx_hex.patch  wallet2_api_expose_pending_tx_change.patch
monero-sys/src/: bridge.h  bridge.rs  database.rs  lib.rs
monero-sys/tests/: restore_wallet.rs  sign_message.rs  simple.rs  special_paths.rs  split_change.rs  transaction_construction_error.rs  transaction_keys.rs  transaction_keys_testnet.rs  wallet_closing.rs
monero-tests/: Cargo.toml
monero-tests/src/: lib.rs
monero-tests/tests/: hermes.rs  reserve_proof.rs  subaddresses.rs  sweep.rs  transaction_keys.rs  transfers.rs  transfers_wrong_key.rs
monero-wallet/: Cargo.toml
monero-wallet-ng/: Cargo.toml
monero-wallet-ng/examples/: scan_wallet.rs  verify_transfer.rs  watch_confirmations.rs
monero-wallet-ng/src/: confirmations.rs  hermes.rs  lib.rs  retry.rs  rpc.rs  scanner.rs  sweep.rs  util.rs  verify.rs
monero-wallet/src/: compat.rs  failover.rs  lib.rs  listener.rs  wallets.rs
monero-wallet/tests/: advanced_wallet_tests.rs  integration_test.rs  tauri_wallet_listener_tests.rs  transaction_tests.rs  wallet_operations.rs
monero-wallet/tests/harness/: mod.rs
monero-wallet2-adapter/: Cargo.toml
monero-wallet2-adapter/src/: lib.rs
monero-wallet2-adapter/tests/: fixtures_test.rs
monero-wallet2-adapter/tests/fixtures/: regenerate.sh  wallet_empty.json  wallet_empty.keys  wallet_long.json  wallet_long.keys  wallet_short.json  wallet_short.keys
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.mobile.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  http_client.rs  lib.rs
src-tauri/src/commands/: specta_test.rs
swap-asb/: Cargo.toml  Dockerfile
swap-asb/src/: command.rs  main.rs
swap-controller/: Cargo.toml  Dockerfile
swap-controller-api/: Cargo.toml
swap-controller-api/src/: lib.rs
swap-controller/src/: cli.rs  main.rs  util.rs
swap-controller/src/repl/: mod.rs  parse.rs
swap-core/: Cargo.toml
swap-core/proptest-regressions/: bitcoin.txt
swap-core/src/: bitcoin.rs  compat.rs  lib.rs  monero.rs
swap-core/src/bitcoin/: cancel.rs  early_refund.rs  final_amnesty.rs  full_refund.rs  lock.rs  mercy.rs  partial_refund.rs  punish.rs  reclaim.rs  redeem.rs  refund.rs  refund_amnesty.rs  refund_burn.rs  timelocks.rs  withhold.rs
swap-db/: Cargo.toml
swap-db/src/: alice.rs  bob.rs
swap-env/: Cargo.toml
swap-env/src/: config.rs  defaults.rs  env.rs  lib.rs  prompt.rs  rpc_auth.rs
swap-feed/: Cargo.toml
swap-feed/src/: bitfinex.rs  exolix.rs  kraken.rs  kucoin.rs  lib.rs  rate.rs  ticker.rs  traits.rs
swap-machine/: Cargo.toml
swap-machine/src/: lib.rs
(+905 files in other folders)
