[workspace]
resolver = "2"
members = [ "eigensync",
  "electrum-pool",
  "libp2p-rendezvous-server",
  "libp2p-tor",
  "monero-rpc",
  "monero-rpc-pool",
  "monero-seed",
  "monero-sys",
  "src-tauri",
  "swap",
  "swap-asb",
  "swap-controller",
  "swap-controller-api",
  "swap-env",
  "swap-feed",
  "swap-fs",
  "swap-orchestrator",
  "swap-serde",
  "throttle",
]

[workspace.dependencies]
# Bitcoin Dev Kit
bdk = "0.28"
bdk_chain = "0.23.0"
bdk_core = "0.6.0"
bdk_electrum = { version = "0.23.0", default-features = false }
bdk_wallet = "2.0.0"
bitcoin = { version = "0.32", features = ["rand", "serde"] }

anyhow = "1"
backoff = { version = "0.4", features = ["futures", "tokio"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
hex = "0.4"
jsonrpsee = { version = "0.25", default-features = false }
libp2p = { version = "0.53.2" }
monero = { version = "0.12", features = ["serde_support"] }
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
toml = "0.9.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
typeshare = "1.0"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Tor/Arti crates
arti-client = { git = "https://github.com/eigenwallet/arti", rev = "18111286b5830cda88af5df1950b5e24ee5a8841", default-features = false }
tor-cell = { git = "https://github.com/eigenwallet/arti", rev = "18111286b5830cda88af5df1950b5e24ee5a8841" }
tor-hsservice = { git = "https://github.com/eigenwallet/arti", rev = "18111286b5830cda88af5df1950b5e24ee5a8841" }
tor-proto = { git = "https://github.com/eigenwallet/arti", rev = "18111286b5830cda88af5df1950b5e24ee5a8841" }
tor-rtcompat = { git = "https://github.com/eigenwallet/arti", rev = "18111286b5830cda88af5df1950b5e24ee5a8841" }

# Terminal Utilities
dialoguer = "0.11"

# Build dependencies
vergen = { version = "8.3", default-features = false, features = ["build", "git", "git2"] }

[patch.crates-io]
# patch until new release https://github.com/thomaseizinger/rust-jsonrpc-client/pull/51
jsonrpc_client = { git = "https://github.com/delta1/rust-jsonrpc-client.git", rev = "3b6081697cd616c952acb9c2f02d546357d35506" }
monero = { git = "https://github.com/comit-network/monero-rs", rev = "818f38b" }

[workspace.lints]
rust.unused_crate_dependencies = "warn"
