[package]
name = "bitcoin-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk = { version = "0.28" }
bdk_chain = { version = "0.20" }
bdk_electrum = { version = "0.19", default-features = false, features = ["use-rustls-ring"] }
bdk_wallet = { version = "1.0.0-beta.5", features = ["rusqlite", "test-utils"] }
bitcoin = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "net", "parking_lot", "rt"] }
derive_builder = "0.20.2"
moka = { version = "0.12", features = ["sync", "future"] }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
ecdsa_fun = { version = "0.10", default-features = false, features = ["libsecp_compat", "serde", "adaptor"] }
rand = { workspace = true }
rand_chacha = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = { workspace = true }
typeshare = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

electrum-pool = { path = "../electrum-pool" }
swap-seed = { version = "0.1.0", path = "../swap-seed" }
monero = { workspace = true }
swap-serde = { path = "../swap-serde" }
swap-env = { path = "../swap-env" }

[lints]
workspace = true
