[package]
name = "bitcoin-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
bdk = { workspace = true }
bdk_chain = { workspace = true }
bdk_core = { workspace = true }
bdk_electrum = { workspace = true, features = ["use-rustls-ring"] }
bdk_wallet = { workspace = true, features = ["rusqlite", "test-utils"] }
bitcoin = { workspace = true }
derive_builder = "0.20.2"
electrum-pool = { path = "../electrum-pool" }
futures = { workspace = true }
moka = { version = "0.12", features = ["sync", "future"] }
reqwest = { workspace = true, features = ["http2", "rustls-tls-native-roots", "stream", "socks"] }
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"
serde = { workspace = true }
serde_json = { workspace = true }
swap-env = { path = "../swap-env" }
swap-serde = { path = "../swap-serde" }
swap-proptest = { path = "../swap-proptest" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
proptest = "1"
