[package]
name = "eigensync-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }

automerge = { workspace = true }
chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
libp2p = { workspace = true, features = [
    "request-response",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "cbor",
    "tokio",
    "ping",
] }
blake3 = "1"

[lints]
workspace = true
