[package]
name = "eigensync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
libp2p = { workspace = true }
eigensync-protocol = { version = "0.1.0", path = "../eigensync-protocol" }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
