[package]
name = "eigensync"
version = "0.1.0"
edition = "2021"
description = "Simple distributed document synchronization using Automerge CRDTs and libp2p"
license = "MIT"
repository = "https://github.com/UnstoppableSwap/unstoppableswap-gui"

[dependencies]
# Core dependencies
serde = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
directories-next = "2"
clap = { workspace = true }

# Automerge for CRDT functionality
automerge = "0.6"

# Networking with libp2p
libp2p = { workspace = true, features = [
    "request-response",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "cbor",
    "tokio",
    "ping",
] }
anyhow = { workspace = true }

tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
env_logger = "0.11"
autosurgeon = { version = "0.8.7", features = ["uuid"] }
hex = { workspace = true }
tokio-util = { version = "0.7.16", features = ["rt"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }

[lints]
workspace = true
