[package]
name = "eigensync"
version = "0.1.0"
edition = "2021"
description = "Simple distributed document synchronization using Automerge CRDTs and libp2p"
license = "MIT"
repository = "https://github.com/eigenwallet/core"

[dependencies]
# Core dependencies
serde = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
blake3 = "1"
ed25519-dalek = { version = "1", features = ["std"] }

# Automerge for CRDT functionality
automerge = { workspace = true }

# Networking with libp2p
libp2p = { workspace = true, features = [
    "request-response",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "cbor",
    "tokio",
    "ping",
] }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
env_logger = "0.11"
autosurgeon = { version = "0.8.7", features = ["uuid"] }
hex = { workspace = true }
tokio-util = { version = "0.7.16", features = ["rt"] }
sqlx = { workspace = true }

[lints]
workspace = true
