[package]
name = "electrum-pool"
version = "0.1.0"
authors = ["eigenwallet Team <help@unstoppableswap.net>"]
edition = "2021"

[dependencies]
backoff = { workspace = true }
bdk_electrum = { workspace = true, features = ["use-rustls-ring"] }
bitcoin = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
