[package]
name = "libp2p-community-tor"
version = "0.5.0"
edition = "2021"
license = "MIT"
resolver = "2"
description = "Tor transport for libp2p."
repository = "https://github.com/umgefahren/libp2p-tor"
authors = ["umgefahren <hannes@umgefahren.xyz>"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

arti-client = { workspace = true, features = ["tokio", "rustls", "onion-service-client", "static-sqlite"] }
libp2p = { workspace = true, features = ["tokio", "tcp", "tls"] }

tor-rtcompat = { workspace = true, features = ["tokio", "rustls"] }
tracing = { workspace = true }
tor-hsservice = { workspace = true, optional = true }
tor-cell = { workspace = true, optional = true }
tor-proto = { workspace = true, optional = true }
data-encoding = { version = "2.6.0" }

[dev-dependencies]
libp2p = { workspace = true, features = ["tokio", "noise", "yamux", "ping", "macros", "tcp", "tls"] }
tokio-test = "0.4.4"
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true }

[features]
listen-onion-service = [
    "arti-client/onion-service-service",
    "dep:tor-hsservice",
    "dep:tor-cell",
    "dep:tor-proto"
]

[[example]]
name = "ping-onion"
required-features = ["listen-onion-service"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
