[package]
name = "monero-harness"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
monero-rpc = { workspace = true }
rand = "0.7"
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
