[package]
name = "monero-harness"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
monero-address = { workspace = true }
monero-daemon-rpc = { workspace = true }
monero-oxide-ext = { path = "../monero-oxide-ext" }
monero-simple-request-rpc = { workspace = true }
monero-sys = { path = "../monero-sys" }
rand = { workspace = true }
reqwest = { workspace = true }
testcontainers = "0.15"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
