[package]
name = "monero-rpc-pool"
version = "0.1.0"
authors = ["eigenwallet Team <help@unstoppableswap.net>"]
edition = "2021"

[[bin]]
name = "monero-rpc-pool"
path = "src/main.rs"

[[bin]]
name = "stress-test"
path = "src/bin/stress_test.rs"
required-features = ["stress-test"]

[[bin]]
name = "stress-test-downloader"
path = "src/bin/stress_test_downloader.rs"
required-features = ["stress-test"]

[features]
stress-test = ["reqwest", "cuprate-epee-encoding"]

[dependencies]
# Core utilities
anyhow = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
crossbeam = "0.8.4"
tokio = { workspace = true, features = ["full"] }

# Serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
typeshare = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Web framework and HTTP
axum = { version = "0.8.4", features = ["macros"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

# TLS/Security
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.26"

# Tor networking
arti-client = { workspace = true, features = ["tokio"] }
tor-rtcompat = { workspace = true, features = ["tokio", "rustls"] }

# Monero/Project specific
monero = { workspace = true }
swap-serde = { path = "../swap-serde" }

# Optional dependencies (for features)
cuprate-epee-encoding = { git = "https://github.com/Cuprate/cuprate.git", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
