[package]
name = "monero-rpc"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
curve25519-dalek = "3.1"
hex = { workspace = true }
jsonrpc_client = { workspace = true, features = ["reqwest"] }
monero = { workspace = true }
monero-epee-bin-serde = { workspace = true }
rand = "0.7"
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true, features = ["serde-float"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
tokio = { workspace = true, features = ["full"] }
