[package]
name = "monero-rpc"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
hex = "0.4"
jsonrpc_client = { version = "0.7", features = ["reqwest"] }
monero = { workspace = true }
monero-epee-bin-serde = "1"
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
