[package]
name = "monero-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
cxx = "1.0.137"
monero = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { workspace = true }
typeshare = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Our crates
swap-serde = { path = "../swap-serde" }
throttle = { path = "../throttle" }

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.137"
diffy = "0.4.2"
fs_extra = "1.3.0"

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.19.1"
testcontainers = "0.15"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
