[package]
name = "monero-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
monero-address = { workspace = true }
monero-daemon-rpc = { workspace = true }
monero-harness = { path = "../monero-harness" }
monero-oxide-ext = { path = "../monero-oxide-ext" }
monero-oxide-wallet = { workspace = true }
monero-simple-request-rpc = { workspace = true }
monero-sys = { path = "../monero-sys" }
monero-wallet-ng = { path = "../monero-wallet-ng" }
testcontainers = { workspace = true }

anyhow = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
