[package]
name = "monero-wallet-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = { workspace = true }
backoff = { workspace = true }
thiserror = { workspace = true }

# Cryptography
curve25519-dalek = { workspace = true }
zeroize = "1.5"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

# monero-oxide crates
monero-daemon-rpc = { workspace = true }
monero-interface = { workspace = true }
monero-oxide = { workspace = true }
monero-oxide-wallet = { workspace = true }
monero-simple-request-rpc = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
